# backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  TESTING.md  audit-report-2025-08-07T07-32-42-281Z.json  audit-script.js  cargo-build-sbf  defaults.d.ts  docker-compose.yml  esbuild.js  fly.prod.toml  fly.test.toml  fly.toml  jest.config.js  package-lock.json  package.json  platform-authority.json  swagger.ts  tsconfig.json  vitest.config.ts
config/: env.example  reward-pool.env.example
localstack/init/: s3.sh
programs/reward-pool/: Cargo.toml
programs/reward-pool/src/: lib.rs
scripts/: audit-smart-contract.ts  build-reward-pool.ts  deploy-native.sh  deploy-reward-pool.ts  fund-vaults.ts  run-all-tests.sh  test-reward-pool.ts
src/: env.d.ts  server.ts  solana-client.ts
src/api/: referral.test.ts  referral.ts  settings.ts  wallet.ts
src/config/: monitoring.ts
src/constants/: referral.ts
src/hooks/: errors.ts
src/middleware/: auth.ts  rateLimiter.ts  rateLimiterConfig.ts  validator.ts
src/models/: ForgeRaceSubmission.ts  GymAgent.ts  GymAgentInvocation.ts  Models.ts  Referral.ts  ReferralCode.ts  TrainingPool.ts  UploadSession.ts
src/scripts/: migrate-keys.ts  start-monitoring.ts  validate-indexes.ts
src/serialization/: layouts.ts  reward-pool.ts
src/services/: database.ts  redis.ts
src/types/: audit.ts  db.ts  forge.ts  index.ts  monitoring.ts
tests/: api.test.ts  monitoring.test.ts  performance-load.test.ts  performance.test.ts  reward-pool-integration.test.ts  reward-pool.test.ts  setup.ts
tests/utils/: testSetup.ts
(+66 files in other folders)
